--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dohwee Kim's Blog</title>
+</head>
 <body>
-<h1>Dohwee Kim</h1>
-<p>Personal web page</p>
+    
 </body>
 </html>
