--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Dohwee Kim's Blog</title>
 </head>
 <body>
-    <h1> Thank you for visiting ...:) </h1>
+    <h1> Dohwee Kim </h1>
+    <h2> Software Engineer </h2>
+    <hr />
+    <p> Experience </p>
+    <hr />
+    <p> Personal projects</p>
+    <a href="https://github.com/Dohwee-Kim"> My Github </a><br/>
+    <hr />
+    <p> </p>
+    <p> Thank you for visiting ... :) <br/>
+        I made this page for HTML5/CSS practice <br/>
+        AND <br/>
+        personal bloging
+    </p>
 </body>
 </html>
