CSS style update, margin collapsing fix

--- a/portfolios/HTML_CSS/HTML/navi_bar/homework1.html
+++ b/portfolios/HTML_CSS/HTML/navi_bar/homework1.html
@@ -6,6 +6,14 @@
         <link rel="stylesheet" href="css/homework_main.css">
     </head>
     <body>
+        <nav class = "navbar">
+            <ul class="li-inline text-center">
+                <li><a href="#">BOSTON</a></li>
+                <li><a href="#">Test</a></li>
+                <li><a href="#">Travel</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
         <div class="container" style="margin: auto">
             <div class="blog-content">
                 <div>
