--- a/portfolios/HTML_CSS/HTML/html_scratch/index.html
+++ b/portfolios/HTML_CSS/HTML/html_scratch/index.html
@@ -7,7 +7,7 @@
 <body>
     <p>안녕하세요</p>
     <h1>헤더입니다</h1>
-    <h4>작업하기 좋네요</h4>
+    <h4>바로변경가능?</h4>
     <h5></h5>
     <br>
     <a href="https://google.com">
