--- a/portfolios/JavaScript_JQuery/lv1/level1_bootstrap_and_ui.html
+++ b/portfolios/JavaScript_JQuery/lv1/level1_bootstrap_and_ui.html
@@ -16,20 +16,25 @@
     <div class="black-background">
         <div class ="white-background">
             <p> please login !</p>
+            <a class="close-btn" href="#" role="button">Close</a>
         </div>
     </div>
 
     <div class="jumbotron main_background">
         <h1 class="display-4">Shirts Studio</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
+        
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
       </div>
 
       <script>
         $('.btn-primary').on('click', function() {
-            $('.black-background').show();
+            $('.black-background').fadeIn();
+        })
+
+        $('.close-btn').on('click', function() {
+          $('.black-background').fadeOut();
         })
       </script>
 
