--- a/portfolios/JavaScript_JQuery/lv1/level1_bootstrap_and_ui.html
+++ b/portfolios/JavaScript_JQuery/lv1/level1_bootstrap_and_ui.html
@@ -20,6 +20,11 @@
         </div>
     </div>
 
+    <div class="nav-menu">
+      <h4 style="margin: 0"> Shirts Studio </h4>
+      <a> Products </a>
+    </div>
+
     <div class="jumbotron main_background">
         <h1 class="display-4">Shirts Studio</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
