Jquery Toggle added

--- a/portfolios/JavaScript_JQuery/lv1/level1_bootstrap_and_ui.html
+++ b/portfolios/JavaScript_JQuery/lv1/level1_bootstrap_and_ui.html
@@ -49,7 +49,7 @@
         })
 
         $('#nav-sub-button').click(function(){
-          $('.nav-sub').slideDown();
+          $('.nav-sub').slideToggle();
         })
         
       </script>
