--- a/portfolios/JavaScript_JQuery/lv1/level1_boostrap_and_ifelse.html
+++ b/portfolios/JavaScript_JQuery/lv1/level1_boostrap_and_ifelse.html
@@ -39,16 +39,16 @@
         <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
       </div>
 
+      <input id = "test-input">
+
       <script>
 
-        if (3 < 1) {
-            console.log('true')
-        } else {
-            console.log('nope')
-        }
 
         $('.btn-primary').on('click', function() {
-            $('.black-background').fadeIn();
+            if ($('#test-input').val() == 'hi') {
+                $('.black-background').fadeIn();
+            }
+            
         })
 
         $('.close-btn').on('click', function() {
