default div and body

--- a/portfolios/HTML_CSS/HTML/html_basic_module_position_task/position.html
+++ b/portfolios/HTML_CSS/HTML/html_basic_module_position_task/position.html
@@ -22,8 +22,19 @@
     <div class="notification-box">
         <h4>How we design our shoes</h4>
         <p>Lorem ipsum dolroej ofkwn cnjknsvkjnfvnfmdnbmf,nb,mg
-            fkj fljflkjdlkjclkjsdlkvdflrmlkvmd klsklvjkjfksmvlkmv
-            daskdljalkjdlwkjdlka mcalksmd klnc lknc lkewmlwlkmal
+            fkj fljflkjdlkjc lkjsdlkvdf lrmlkvmd kls klvjk jfksmv lkmv
+            daskd ljalkjdl wkjdlka mcalksmd klnc lknc lkewmlwlkmal
+            femklfmslkcmf kqwpdkp</p>
+        </p>
+    </div>
+
+    <br>
+
+    <div class="notification-box" style="padding: 50px">
+        <h4>How we design our shoes</h4>
+        <p>Lorem ipsum dolroej ofkwn cnjknsvkjnfvnfmdnbmf,nb,mg
+            fkj fljflkjdlkjc lkjsdlkvdf lrmlkvmd kls klvjk jfksmv lkmv
+            daskd ljalkjdl wkjdlka mcalksmd klnc lknc lkewmlwlkmal
             femklfmslkcmf kqwpdkp</p>
         </p>
     </div>
