--- a/portfolios/Node_JS/write.html
+++ b/portfolios/Node_JS/write.html
@@ -10,34 +10,23 @@
     <title>Hello, world!</title>
   </head>
   <body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">TODO app</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Write</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">temporary</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">You are at home ! </h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-        </div>
-      </div>
     
+    <h4 class="container mt-4"><strong>글 작성 페이지</strong></h4>
+
+    <div class ="container mt-3">
+        <form action="/add" method="POST">  <!-- 액션이랑 method 는 필수-->
+            <div class="form-group">
+                <label> TODO list</label>
+                <input type="text" class="form-control" name="title">
+            </div>
+            <div class="form-group">
+                <label>Date</label>
+                <input type="text" class="form-control" name="date">
+            </div>
+            
+            <button type="submit" class="btn btn-outline-secondary">Submit</button>
+        </form>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
