--- a/portfolios/HTML_CSS_RE/lecture1/layout1.html
+++ b/portfolios/HTML_CSS_RE/lecture1/layout1.html
@@ -10,6 +10,7 @@
             <div class="header"></div>
             <div class="left-menu"></div>
             <div class="right-menu"></div>
+            <div class="footer"></div>
         </div>
 
     </body>
